[project]
name = "mriutils-in-jax"
version = "0.2.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10" # because of jax version
dependencies = [
  "cycler>=0.12.1",
  "jax>=0.4.35",
  "jaxtyping>=0.2.36",
  "loguru>=0.7.3",
  "matplotlib>=3.9",
  "tqdm>=4.67.1",
]
[project.optional-dependencies]
dev = ["pytest", "yaslp @ git+https://github.com/medphysjena/yaslp.git@v0.2.0"]
cli = ["click", "typer", "braceexpand", "nibabel"]
io = ["nibabel"]
registration = ["skimage_in_jax @ git+https://github.com/Sibgatulin/skimage_in_jax.git@v0.1.1"]
phase_corr = ["jaxopt"]

[tool.ruff.lint]
ignore = ["F722"]
